--- a/ionic-angular/capacitor.config.json
+++ b/ionic-angular/capacitor.config.json
@@ -3,8 +3,5 @@
   "appName": "ionic-angular",
   "bundledWebRuntime": false,
   "webDir": "www",
-  "linuxAndroidStudioPath": "/home/ivan/android-studio/bin/studio.sh",
-  "server": {
-    "url": "http://10.0.1.50:8100"
-  }
+  "linuxAndroidStudioPath": "/home/ivan/android-studio/bin/studio.sh"
 }
